--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,7 +1,8 @@
-<!--©2016 Casey Hayes & Tanner McIntyre. All Rights Reserved.-->
-
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <!--©2016 Casey Hayes & Tanner McIntyre. All Rights Reserved.-->
     <servlet>
         <servlet-name>calculate</servlet-name>
         <servlet-class>chtm.calculator.Calculate</servlet-class>
@@ -23,3 +24,4 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
+
